Add vectorization bench for panama